--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,7 +26,7 @@ body{
             left: 0;
             right: 0;
             bottom: 3em;
-            background-color:rgba(0, 98, 255, 0.466);      
+            background-color:rgba(0, 98, 255, 0.866);      
             transition: all 0.8s;
 
             & ul.header-main-content-list-items{
@@ -48,6 +48,7 @@ body{
                         text-decoration: none;
                         color: whitesmoke;
                         transition: all 1s;
+                        font-size:2.5vh;
                         
                     }
                 }
@@ -98,6 +99,34 @@ body{
             &:target{
                 background-color: whitesmoke;
                 color: rgba(0, 0, 0, 0.9);
+            }
+        }
+        & section#courses{
+            padding:0;
+            
+            & article div{
+                width:100% !important;
+                min-height:100vh;
+                display:grid;
+                grid-template-columns: minmax(160px,1fr);
+                row-gap:0.3em;
+                & iframe{
+                    width:100%;
+                    height:35vh;
+                    // height:calc(6/9*100%);
+                    align-self: stretch;
+                }
+
+                & h2{
+                    // &::before{
+                    //     height:3em;
+                    // }
+                    margin:3.5em 0 1em 0;
+                    text-align:center;
+                    font-size:4vh;
+                    text-shadow: 3px 3px 6px rgba(9, 115, 236, 0.692);
+                }
+
             }
         }
     }
